2005-11-16  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Update changes for 8.4.12 release

2005-11-16  Vince Darley <vincentdarley@users.sourceforge.net>

	* doc/text.n: clarify left to right interpretation of index
	modifiers, including the fact that validation occurs after
	each step [Bug 1357575]

2005-11-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* unix/tcl.m4: Add missing LIBS for OpenBSD shared libary

2005-10-18  Don Porter  <dgp@users.sourceforge.net>

        * generic/tkMain.c:     Rewrote code that sets the ::argv value
        to be sure conversion from the system encoding is complete before
        any processing sensitive to list-special characters is done.
        [Bug 1328926].

2005-10-17  Jeff Hobbs  <jeffh@ActiveState.com>

	* macosx/tkMacOSXScrlbr.c (UpdateControlValues): check geomMgrPtr
	is valid before checking type

2005-10-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkInt.h: add MODULE_SCOPE and WORDS_BIGENDIAN checks
	that will work with OS X universal binary compiles. (steffen)

	* generic/tkConfig.c (Tk_DeleteOptionTable, Tk_CreateOptionTable):
	properly alloc/delete one more option. [Bug 1319720] (melbardis)

2005-10-10  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/winfo.test: Wait until child window is visible
	* tests/wm.test:    Modified test to match actual error output.

2005-10-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/dialog.tcl (::tk_dialog): add tkwait visibility before
	grab. [Bug 1216775]

	* win/tkWinDialog.c (ChooseDirectoryValidateProc): reset stored
	path to "" if it doesn't exist and -mustexist is true. [Bug 1309218]

2005-09-15  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkOldConfig.c (GetCachedSpecs): Split out the code to
	manipulate the cached writable specs so that it can be reused from
	all the public Tk_Configure* functions.
	(Tk_ConfigureInfo, Tk_ConfigureWidget, Tk_ConfigureValue): Use the