@@ -1,11 +1,11 @@
 README:  Tk
-    This is the Tk 8.4.11 source distribution.
+    This is the Tk 8.4.12 source distribution.
     Tcl/Tk is also available through NetCVS:
 	http://tcl.sourceforge.net/
     You can get any source release of Tcl from the file distributions
     link at the above URL.
 
-RCS: @(#) $Id: README,v 1.39.2.11 2005/06/18 19:36:55 dgp Exp $
+RCS: @(#) $Id: README,v 1.39.2.12 2005/11/16 22:07:37 dgp Exp $
 
 1. Introduction
 ---------------
