@@ -12,7 +12,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tk.h,v 1.74.2.11 2005/06/18 19:36:55 dgp Exp $
+ * RCS: @(#) $Id: tk.h,v 1.74.2.12 2005/11/16 22:07:37 dgp Exp $
  */
 
 #ifndef _TK
@@ -50,10 +50,10 @@ extern "C" {
 #define TK_MAJOR_VERSION   8
 #define TK_MINOR_VERSION   4
 #define TK_RELEASE_LEVEL   TCL_FINAL_RELEASE
-#define TK_RELEASE_SERIAL  11
+#define TK_RELEASE_SERIAL  12
 
 #define TK_VERSION	"8.4"
-#define TK_PATCH_LEVEL	"8.4.11"
+#define TK_PATCH_LEVEL	"8.4.12"
 
 /*
  * The following definitions set up the proper options for Macintosh
